:sparkles: Update to JDK 21 using Gradle and JUnit 5. Used modifications done by https://github.com/olivierpaul/fim